syntax = "proto3";

option csharp_namespace = "Moonlay.MasterData.Protos";

package Moonlay;

message Reply {
    bool success = 1;
    string message = 2;
}

//-------------------ManageCustomerService-----------------//

message NewCustomerReq {
    string name = 1;
}

//-------------------End-----------------------------------//


//-------------------ManageDatasetService-----------------//

message AllDataSetsReq {
  string domainName = 2;
}

message AllDataSetsReply {
  bool success = 1;
  repeated DataSetArg Data = 2;
}

// Command for create a dataset
message NewDatasetReq {
  string name = 1;
  string domainName = 2;
  string organizationName = 3;
  repeated AttributeArg attributes = 4;
}

message AttributeArg {
    string name = 1;
    string type = 2;
}

message DataSetArg {
    string name = 1;
}

message RemoveDataSetReq {
    string name = 1;
}

//-------------------End-----------------------------------//


//-------------------ManageDatasetService-----------------//

message NewOrganizationReq {
  string name = 1;
}

//-------------------End-----------------------------------//


