syntax = "proto3";

import "messages.proto";

option csharp_namespace = "Moonlay.MasterData.Protos";

package Moonlay;

// The greeting service definition.
service ManageOrganization {
  // New Organization
  rpc NewOrganization (NewOrganizationReq) returns (Reply);
}

service ManageDataSet {
  // New dataset
  rpc NewDataset (NewDatasetReq) returns (Reply);
  rpc RemoveDataSet (RemoveDataSetReq) returns (Reply);
  rpc AllDataSets (AllDataSetsReq) returns (AllDataSetsReply);
}

// The customer service definition.
service ManageCustomer {
    // New Organization
    rpc NewCustomer (NewCustomerReq) returns (Reply);
}